--- a/dissertation_main.tex
+++ b/dissertation_main.tex
@@ -5,7 +5,7 @@
    % put here packages only for the PDF:
    \DeclareGraphicsExtensions{.pdf,.png,.jpg,.mps}
    % \usepackage{hyperref}
-   \usepackage[plainpages=false]{hyperref}
+   % \usepackage[plainpages=false]{hyperref}
 \else
    % put here packages only for the DVI:
 \fi
@@ -31,6 +31,8 @@
 \input{./tex/main}
 \input{./tex/conclusions}
 \input{./tex/acknowledgements}
+\input{./tex/appendix}
+
 
 
 % \appendix
