--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -17,4 +17,6 @@ Simone for being a truly nourishing host and dear partner in life and crime duri
 
 Jan and Pim for bringing out the best in me, no matter how many kilometres our friendship spans.
 
+My mother and sister for being so super supportive during the final week.
+
 Goldsmiths with her unconventional Department of Computing for having me experience the creative side of Computer Science and letting me merge my passions for AI and video.
