--- a/tex/main/humanComputation.tex
+++ b/tex/main/humanComputation.tex
@@ -2,7 +2,7 @@
 \label{ch:human_computation}
 
 \section{Introduction} % (fold)
-\label{sec:introduction}
+\label{sec:hc_introduction}
 
 
 % TODO define HCS
