--- a/tex/conclusions.tex
+++ b/tex/conclusions.tex
@@ -1,16 +1,9 @@
 \chapter{Conclusions}
-\label{chapter:conclusions}
+\label{ch:conclusions}
  
+This thesis has aimed to show how different characteristics of digital video make the medium hard to interpret computationally. A main issue in the meaningful computational analysis of video content is the semantic gap between low-level features extracted by computers and high-level semantic interpretations used by humans. We have shown why the gap is hard to close by current methods and have pointed to human computation as a paradigm that may prove particularly helpful in alleviating the problems posed by the semantic gap.
+Several aspects of the medium video such as the sensory nature of much of the information included in video, make the joint effort of humans and computers an appropriate framework in addressing challenges relating to meaningful interpretation of video content. Furthermore, the current proliferation of online video tools, platforms and networks may provide useful entry points for human computation systems directing human cognitive power to the purpose of solving tasks currently left unsolved by computers.
 
-This is the conclusions chapter.
+In our investigation of the use of human computation for meaningful video interpretation, we have implemented our own system called `wePorter' that uses implicit attentional feedback to provide interest-based video filtering at segment level. We have proposed `parallel play' as a method for user preference elicitation that may prove  particularly useful for time-based multimedia content. The system reconfigures hyperlinked parts of videos into new sequences, used both as unit for data acquisition and unit of presentation of filtered content. The developed framework allows for experimentation with filtering and recommendation based on implicitly acquired attention data.
 
-\begin{itemize}
-  \item Human Computation might be especially applicable in UGVC (and multimedia) applications
-  \item Human interaction can be a valuable source of information for the filtering of media content, even without explicit use of semantical concepts.
-  \item We have proposed the basis of a system that allows for experimentation with implicit capturing of user interaction data and algorithmic reconfiguration of video segments based on the acquired data. The system can be used for filtering based on attentional data, but interaction opportunities can be extended.
-  \item Specifically the method of Parallel Play may prove useful in allowing for segmented user preference elicitation in time-based media.
-  \item Applied methods are very data-reliant and therefore need more experimentation for results to be further corroborated. An initial analysis though, hints that the methodology can enable meaningful filtering of unstructured video content in a way that is in line with user interests.
-  \item Configuration of video parts to be tested
-  \item Parallel sequences (= reconfiguration) are experienced as informative and entertaining.
-\end{itemize}
-
+Although having received only a small number of interactions per video segment, initial evaluation shows that the filtering provided by our system corresponds to collective ratings of interest and more general assessments of preference. We have experimented on the domain of raw, unedited user-generated content contributed by attendees of a single large-scale public event. Experiments show that the proposed methods for filtering pick out video segments that are found to be evaluated relatively interesting and preferential compared to segments receiving low scores from our attention based methods.
